// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiVerticalBarSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(0,0)"
        >
          <rect
            height="66.66666666666666"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="255"
            x="22.5"
            y="133.33333333333334"
          />
          <rect
            height="200"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="255"
            x="322.5"
            y="0"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(0,0)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="200"
            y2="200"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="173.33333333333334"
            y2="173.33333333333334"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="146.66666666666666"
            y2="146.66666666666666"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="120"
            y2="120"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="93.33333333333333"
            y2="93.33333333333333"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="66.66666666666669"
            y2="66.66666666666669"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="40"
            y2="40"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="13.333333333333343"
            y2="13.333333333333343"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(0,200)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="600"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(29.999999999999993, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(90, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(150, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(210, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(270, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(330, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(390, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(450, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(510, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(570, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.4
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,0)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="0"
            y1="0"
            y2="200"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 200)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 173.33333333333334)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 146.66666666666666)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 120)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 93.33333333333333)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 66.66666666666669)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 40)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 13.333333333333343)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalBarSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(0,0)"
        >
          <rect
            height="66.66666666666666"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="255"
            x="22.5"
            y="133.33333333333334"
          />
          <rect
            height="200"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="255"
            x="322.5"
            y="0"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(0,0)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="200"
            y2="200"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="173.33333333333334"
            y2="173.33333333333334"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="146.66666666666666"
            y2="146.66666666666666"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="120"
            y2="120"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="93.33333333333333"
            y2="93.33333333333333"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="66.66666666666669"
            y2="66.66666666666669"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="40"
            y2="40"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="13.333333333333343"
            y2="13.333333333333343"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(0,200)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="600"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(29.999999999999993, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(90, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                -0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(150, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(210, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(270, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(330, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(390, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(450, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(510, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(570, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.4
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,0)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="0"
            y1="0"
            y2="200"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 200)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 173.33333333333334)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 146.66666666666666)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 120)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 93.33333333333333)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 66.66666666666669)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 40)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 13.333333333333343)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalBarSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(0,0)"
        >
          <rect
            height="100"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="255"
            x="22.5"
            y="100"
          />
          <rect
            height="60"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="255"
            x="322.5"
            y="140"
          />
        </g>
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(0,0)"
        >
          <rect
            height="40"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="255"
            x="22.5"
            y="60"
          />
          <rect
            height="140"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="255"
            x="322.5"
            y="0"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(0,0)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="200"
            y2="200"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="160"
            y2="160"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="120"
            y2="120"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="80"
            y2="80"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="40"
            y2="40"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="600"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(0,200)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="600"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(150, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(450, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,0)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="0"
            y1="0"
            y2="200"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 200)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 160)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 120)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 80)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 40)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
